--- a/404.html
+++ b/404.html
@@ -8,8 +8,8 @@ permalink: /404.html
 <body>
   <section class="fourzerofour">
       <p>
-        <img src="{{ '/assets/img/cat_404.jpg' | relative_url }}" width="300px"><br>
-        404 page not found <br>
+        <img src="{{ '/assets/img/404.gif' | relative_url }}" width="300px"><br>
+        <br>404 page not found <br>
         Go <a href="{{ '/' | relative_url }}">home</a> :)
       </p>
   </section>
