--- a/404.html
+++ b/404.html
@@ -5,7 +5,7 @@ permalink: /404.html
 <!DOCTYPE html>
 <html lang="en">
   {% include head.html %}
-<body>
+<body background-color:"white">
   <section class="fourzerofour">
       <p>
         <img src="{{ '/assets/img/404.gif' | relative_url }}" width="300px"><br>
