--- a/404.html
+++ b/404.html
@@ -5,10 +5,10 @@ permalink: /404.html
 <!DOCTYPE html>
 <html lang="en">
   {% include head.html %}
-<body background-color:"white">
+<body style="background-color:#ffffff;">
   <section class="fourzerofour">
       <p>
-        <img src="{{ '/assets/img/404.gif' | relative_url }}" width="300px"><br>
+        <img src="https://m3-static.marvelapp.com/assets/dadea5f740a58a0f63565f1295854a98.gif" width="300px"><br>
         <br>404 page not found <br>
         Go <a href="{{ '/' | relative_url }}">home</a> :)
       </p>
