--- a/aboutme.html
+++ b/aboutme.html
@@ -4,9 +4,12 @@ layout: page
 
 <section class="aboutme">
     <div class="post_content">
-        <p>
-            If you don't need 'about' page, edit the _config.yml to comment out the code.
-            <br><br>
-        </p>
+        <p>平凡至极又可爱非常</p>
+        <hr style="FILTER:alpha(opacity=100,finishopacity=0,style=3)" width="80%"color=#987cb9 SIZE=3>
+        <ul>
+          <li><a href="https://github.com/whfox" target="_blank">Github</a></li>
+          <li><a href="mailto:boy6.19@163.com" target="_blank">Email</a></li>
+          <li><a href="mailto:boy6.19@163.com" target="_blank">知乎</a></li>
+        </ul>
     </div>
 </section>
