update about me

--- a/aboutme.html
+++ b/aboutme.html
@@ -4,12 +4,15 @@ layout: page
 
 <section class="aboutme">
     <div class="post_content">
-        <p>平凡至极又可爱非常</p>
-        <hr style="FILTER:alpha(opacity=100,finishopacity=0,style=3)" width="80%"color=#987cb9 SIZE=3>
+        <p align="center">平凡至极又可爱非常</p>
+        <hr style="FILTER:alpha(opacity=100,finishopacity=0,style=3)" width="90%"color=#987cb9 SIZE=3>
         <ul>
           <li><a href="https://github.com/whfox" target="_blank">Github</a></li>
           <li><a href="mailto:boy6.19@163.com" target="_blank">Email</a></li>
-          <li><a href="mailto:boy6.19@163.com" target="_blank">知乎</a></li>
+          <li><a href="https://www.zhihu.com/people/jiang-yuan-73-40" target="_blank">知乎</a></li>
         </ul>
+    </div>
+    <div class="post_coffee">
+        <p align="right">Buy Me a Coffee</p>
     </div>
 </section>
