--- a/aboutme.html
+++ b/aboutme.html
@@ -12,7 +12,9 @@ layout: page
           <li><a href="https://www.zhihu.com/people/jiang-yuan-73-40" target="_blank">知乎</a></li>
         </ul>
     </div>
-    <div class="post_coffee">
-        <p align="right">Buy Me a Coffee</p>
-    </div>
+    <a href="/coffee.html" target="_blank">
+      <div class="post_coffee">
+        Buy Me a Coffee
+      </div>
+    </a>
 </section>
