--- a/aboutme.html
+++ b/aboutme.html
@@ -12,7 +12,7 @@ layout: page
           <li><a href="https://www.zhihu.com/people/jiang-yuan-73-40" target="_blank">知乎</a></li>
         </ul>
     </div>
-    <a href="/coffee.html" target="_blank">
+    <a href="/coffee.html" target="_blank" id="aa">
       <div class="post_coffee">
         Buy Me a Coffee
       </div>
