update about me

--- a/404.html
+++ b/404.html
@@ -8,7 +8,7 @@ permalink: /404.html
 <body style="background-color:#ffffff;">
   <section class="fourzerofour">
       <p>
-        <img src="https://m3-static.marvelapp.com/assets/dadea5f740a58a0f63565f1295854a98.gif" width="300px"><br>
+        <img src="http://tva1.sinaimg.cn/large/007aNvkTgy1h7gq7x84hmg30m80goe81.gif" width="300px"><br>
         <br>404 page not found <br>
         Go <a href="{{ '/' | relative_url }}">home</a> :)
       </p>
