--- a/coffee.html
+++ b/coffee.html
@@ -8,7 +8,7 @@ permalink: /coffee.html
 <body style="background-color:#ffffff;">
   <section class="fourzerofour">
       <p>
-        <iframe src="https://player.bilibili.com/player.html?aid=80433022&amp;bvid=BV1GJ411x7h7&amp;cid=137649199&amp;page=1&amp;high_quality=1&amp;danmaku=0" width="40%" height="30%" scrolling="no" frameborder="0" sandbox="allow-top-navigation allow-same-origin allow-forms allow-scripts"></iframe>
+        <video src="https://img9.doubanio.com/view/group_topic/raw/public/p502232925.mp4" type="video/mp4" autoplay="autoplay" loop="loop" muted="muted" height="100%" width="300px"></video>
         <br>Thanks you. <br>
         Go <a href="{{ '/' | relative_url }}">home</a> :)
       </p>
