--- a/coffee.html
+++ b/coffee.html
@@ -8,7 +8,7 @@ permalink: /coffee.html
 <body style="background-color:#ffffff;">
   <section class="fourzerofour">
       <p>
-        <video src="https://img9.doubanio.com/view/group_topic/raw/public/p502232925.mp4" type="video/mp4" autoplay="autoplay" loop="loop" muted="muted" height="100%" width="300px"></video>
+        <img src="http://tva1.sinaimg.cn/large/007aNvkTgy1h7hasqt0k6g308w06o7wl.gif" width="300px">
         <br>Thanks you. <br>
         Go <a href="{{ '/' | relative_url }}">home</a> :)
       </p>
