--- a/coffee.html
+++ b/coffee.html
@@ -5,7 +5,7 @@ permalink: /coffee.html
 <!DOCTYPE html>
 <html lang="en">
   {% include head.html %}
-<body style="background-color:#ffffff;">
+<body style="background-color:#eeeeee;">
   <section class="fourzerofour">
       <p>
         <img src="http://tva1.sinaimg.cn/large/007aNvkTgy1h7hasqt0k6g308w06o7wl.gif" width="300px">
