--- a/coffee.html
+++ b/coffee.html
@@ -9,7 +9,7 @@ permalink: /coffee.html
   <section class="fourzerofour">
       <p>
         <img src="http://tva1.sinaimg.cn/large/007aNvkTgy1h7hasqt0k6g308w06o7wl.gif" width="300px">
-        <br>Thanks you. <br>
+        <br>Thank you. <br>
         Go <a href="{{ '/' | relative_url }}">home</a> :)
       </p>
   </section>
