--- a/aboutme.html
+++ b/aboutme.html
@@ -14,7 +14,7 @@ layout: page
     </div>
     <a href="/coffee.html" target="_blank">
       <div class="post_coffee">
-        Buy Me a Coffee
+        Buy me a cup of coffee ☕
       </div>
     </a>
 </section>
